fixing looks on small devices. fixing sidebar sub menu

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -74,7 +74,6 @@ a.profile-picture:hover{
 }
 
 i.ionicons{
-    margin-left:10px;
     margin-right: 10px;
 }
 
@@ -227,7 +226,7 @@ i.ionicons{
 }
 
 .carousel{
-    height: 500px;
+    max-height: 500px;
     overflow: hidden;
 }
 
@@ -237,8 +236,40 @@ i.ionicons{
     left: 50%;
     height:50px;
     z-index: 15;
-    width: 10%;
+    max-width: 10%;
     margin-left: -5%;
     text-align: center;line-height: 35px;
     font-weight: bold;
+    min-width:190px;
+}
+.top-menu-left{
+    float: left;
+    background: transparent none;
+    padding: 15px 15px;
+    color:white;
+}
+.top-menu-left:hover{
+    background: #357CA5;
+    color:white;
+}
+.toggle-button{
+    width: 40px;
+    height: 37px;
+    position: absolute;
+    top: 82px;
+    z-index: 100;
+    line-height: 40px;
+    background: #3C8DBC;
+    text-align: center;
+    color: #ffffff;
+}
+.toggle-button:hover{
+    background: #357CA5;
+    color:white;
+}
+.toggle-button > i{
+    position:inherit;
+}
+.toggle-button .k{
+    height:100%;
 }
